--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "219f4c7b-fbcd-4494-b18d-810be879bede",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "23277741-c089-4f3b-aef4-573c321c83b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'agent': {'agent_name': '', 'llm': '', 'embedding_model': ''},\n",
+       "{'agent': {'name': '', 'language_model': '', 'embedding_model': ''},\n",
        " 'prompts': {'raw': '', 'mod': ''},\n",
        " 'criteria': {'user_criteria': [{'name': '',\n",
        "    'raw': '',\n",
@@ -28,7 +28,7 @@
        "  'agent_criteria': [{'name': '', 'raw': '', 'mod': '', 'embedding': []}]}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,23 +41,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1819c98a-6b99-4cdd-8733-0484c147e437",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4005051341.py, line 15)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 15\u001b[0;36m\u001b[0m\n\u001b[0;31m    self.agent =\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class Midas:\n",
     "\n",
     "    def __init__():\n",
     "\n",
-    "        self.agent = {}\n",
-    "        self.prompts = {}\n",
-    "        self.criteria = {}\n",
+    "        self.agent = {\n",
+    "            'name': '',\n",
+    "            'language_model': '',\n",
+    "            'embedding_model': '',\n",
+    "        }\n",
+    "        self.prompts = {\n",
+    "            'raw':'',\n",
+    "            'mod':''\n",
+    "        }\n",
+    "        self.criteria = {\n",
+    "            'raw':\n",
+    "            'mod':\n",
+    "        }\n",
     "\n",
     "    def load(f):\n",
     "\n",
-    "        self.a"
+    "        self.agent = "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4830be4c-9f16-4c9f-8a78-267116d6c8a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
