--- a/exploration/richy_v1.ipynb
+++ b/exploration/richy_v1.ipynb
@@ -342,6 +342,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Retrieval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_str = \"Can you tell me the final price agreed upon by the buyer and seller?\"\n",
+    "headers = {\"Authorization\": f\"Bearer {os.getenv('HUGGINGFACE_API_TOKEN')}\"}\n",
+    "embedding_endpoint = \"https://api-inference.huggingface.co/pipeline/feature-extraction/BAAI/bge-small-en-v1.5\"\n",
+    "embedding_payload = {\n",
+    "    \"inputs\": [query_str],\n",
+    "    \"options\": {\n",
+    "        \"wait_for_model\": True\n",
+    "    }\n",
+    "}\n",
+    "embedding_response = requests.post(embedding_endpoint, headers=headers, json=embedding_payload)\n",
+    "embeddings = list(json.loads(embedding_response.text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.vector_stores import VectorStoreQuery\n",
+    "\n",
+    "query_mode = \"default\"\n",
+    "# query_mode = \"sparse\"\n",
+    "# query_mode = \"hybrid\"\n",
+    "vector_store_query = VectorStoreQuery(\n",
+    "    query_embedding= embeddings[0], similarity_top_k=4, mode=query_mode\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f6/9x0n5ss541zbf3wvyvw_pc1c0000gn/T/ipykernel_87838/28475890.py:2: UserWarning: Collection 'midas_collection' is detected as legacy and has indexing turned on for all fields. This implies stricter limitations on the amount of text each entry can store. Consider reindexing anew on a fresh collection to be able to store longer texts.\n",
+      "  vector_store = AstraDBVectorStore(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from llama_index.vector_stores import AstraDBVectorStore\n",
+    "vector_store = AstraDBVectorStore(\n",
+    "    token=os.getenv('ASTRA_DB_APPLICATION_TOKEN'),\n",
+    "    api_endpoint=os.getenv('ASTRA_DB_API_ENDPOINT'),\n",
+    "    collection_name=\"midas_collection\",\n",
+    "    embedding_dimension=384,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We can remove the design service to give you a discount. I'm not sure we can do 7.50. Let me get back to you on that.\n",
+      "Best,\n",
+      "Richy\n",
+      "[Quoted text hidden]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_result = vector_store.query(vector_store_query)\n",
+    "print(query_result.nodes[0].get_content())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[TextNode(id_='d7518fa0-0517-46d6-9f36-ae850a57bd3f', embedding=None, metadata={'sender': 'Richy Chen <richychentl@gmail.com>', 'receiver': 'Mehul Khetrapal <mehulkhetrapal1@gmail.com>', 'date': '02/03/2024, 11:04'}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, text=\"We can remove the design service to give you a discount. I'm not sure we can do 7.50. Let me get back to you on that.\\nBest,\\nRichy\\n[Quoted text hidden]\", start_char_idx=None, end_char_idx=None, text_template='{metadata_str}\\n\\n{content}', metadata_template='{key}: {value}', metadata_seperator='\\n'),\n",
+       " TextNode(id_='99f36e66-73a8-48e7-a97e-9cd1c0e08ea6', embedding=None, metadata={'sender': 'Mehul Khetrapal <mehulkhetrapal1@gmail.com>', 'receiver': 'Richy Chen <richychentl@gmail.com>', 'date': '02/03/2024, 11:02'}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, text='Hey Richy,\\nWe are aiming for $7.50 per unit production. Can we remove the design service to get the price lower?\\n[Quoted text hidden]\\n--\\nMehul Khetrapal\\nUniversity of Southern California ‘20 ‘21\\nB.S. Computational Neuroscience\\nM.S. Biomedical Engineering\\nhttps://www.linkedin.com/in/mehul-khetrapal/', start_char_idx=None, end_char_idx=None, text_template='{metadata_str}\\n\\n{content}', metadata_template='{key}: {value}', metadata_seperator='\\n'),\n",
+       " TextNode(id_='e8051152-c52e-410f-835a-dc8b70022551', embedding=None, metadata={'sender': 'Richy Chen <richychentl@gmail.com>', 'receiver': 'Mehul Khetrapal <mehulkhetrapal1@gmail.com>', 'date': '02/03/2024, 11:07'}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, text='OK, we can do $8\\n[Quoted text hidden]\\n\\nMehul Khetrapal <mehulkhetrapal1@gmail.com> - Sat, Feb 3, 2024 at 11:08 AM\\n\\nLink to the conversation\\n---\\n2/3/24, 11:09 AM                                                                     Gmail - ASW followup\\n\\nTo: Richy Chen <richychentl@gmail.com>\\n\\nHey Jerry!\\n\\nThat works for us. Can you send over the contract?\\n\\n[Quoted text hidden]\\n\\nhttps://mail.google.com/mail/u/0/?ik=82f527275a&view=pt&search=all&permthid=thread-f:1789905488624882917&simpl=msg-f:1789905488624882917&simpl=…  2/2', start_char_idx=None, end_char_idx=None, text_template='{metadata_str}\\n\\n{content}', metadata_template='{key}: {value}', metadata_seperator='\\n'),\n",
+       " TextNode(id_='81feeb58-a9d4-48c3-9198-970c8ae4781c', embedding=None, metadata={'sender': 'Richy Chen <richychentl@gmail.com>', 'receiver': 'Mehul Khetrapal <mehulkhetrapal1@gmail.com>', 'date': '02/03/2024, 11:01'}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, text='Hey Mehul,\\nHope you had a fruitful ASW.\\nHere are our standard terms for manufacturing hoodies.\\n\\n|Cost|$10 per garment|\\n|---|---|\\n|Minimum order quantity|1000|\\n|Turnaround|3 months|\\n|Design service|Included|\\n\\nBest,\\nRichy', start_char_idx=None, end_char_idx=None, text_template='{metadata_str}\\n\\n{content}', metadata_template='{key}: {value}', metadata_seperator='\\n')]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_result.nodes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
