--- a/Train.ipynb
+++ b/Train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "778c4454-2f16-490b-a009-9ac6080f683f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "985f06a7-0b7a-40ef-81bb-38642b6b4352",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "23277741-c089-4f3b-aef4-573c321c83b5",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4830be4c-9f16-4c9f-8a78-267116d6c8a2",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "68cc8597-5b1f-4fdc-a30d-6f99f16bc6e7",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "4fbfbb0f-8b2f-40fd-a3d0-e21b56926cc1",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Query"
+    "Query.run("
    ]
   },
   {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "315c0068-b427-47dc-8452-9d49ac267a2c",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
        "  0.02046116255223751]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,6 +546,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4f2131ae-7a21-4438-9a77-2c97c173bc0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6403d074-88b9-46ac-b1a4-88e5329de730",
    "metadata": {},
    "outputs": [],
    "source": []
