--- a/exploration/richy_v1.ipynb
+++ b/exploration/richy_v1.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id 29fc98f8-6628-455b-a423-9a9d0aeb2599\n"
+      "Started parsing the file under job_id 2971fb25-1a93-47b5-b8e2-819436d9a7f9\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -141,29 +141,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re \n",
     "from datetime import datetime\n",
     "\n",
-    "emails = re.split(\".*<.*>.*\\n*To:.*<.*>\", documents[0].text)[1:]\n",
-    "headers = re.findall(\".*<.*>.*\\n*To:.*<.*>\", documents[0].text)\n",
+    "emails = re.split(\"<.*@.*>\\n*.*(?:Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)+ (?:0?[1-9]|[1-3][0-9]), [12][0-9]{3} at (?:[0-1]?[0-9]|2[0-3]):(?:[0-5][0-9]+) (?:AM|PM)\\n*.*<.*@.*>\", documents[0].text)[1:]\n",
+    "headers = re.findall(\"(<.*@.*>)\\n*.*(Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec)+ (0?[1-9]|[1-3][0-9]), ([12][0-9]{3}) at ([0-1]?[0-9]|2[0-3]):([0-5][0-9]+) (AM|PM)\\n*.*(<.*@.*>)\", documents[0].text)\n",
     "\n",
     "emails_with_metadata = []\n",
     "\n",
     "for email, header in zip(emails, headers):\n",
-    "    sender = re.findall(\".*<.*>\", header)[0]\n",
-    "    receiver = re.findall(\"To:.*<.*>\", header)[0][4:]\n",
-    "    date = re.findall(\"(Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec) (0?[1-9]|[1-3][0-9]), ([2][0-9]+) at ([0-1]?[0-9]|2[0-3]):([0-5][0-9]+) (AM|PM)\", header)[0]\n",
-    "    date = datetime.strptime(f'{date[0]} {date[1]}, {date[2]} {date[3]}:{date[4]} {date[5]}', '%b %d, %Y %I:%M %p')\n",
+    "    sender = header[0]\n",
+    "    receiver = header[7]\n",
+    "    date = datetime.strptime(f'{header[1]} {header[2]}, {header[3]} {header[4]}:{header[5]} {header[6]}', '%b %d, %Y %I:%M %p')\n",
     "    emails_with_metadata.append((email, {\"sender\": sender, \"receiver\": receiver, \"date\": date.strftime(\"%m/%d/%Y, %H:%M\")}))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,19 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hey Mehul,\\nHope you had a fruitful ASW.\\nHere are our standard terms for manufacturing hoodies.\\n\\n|Cost|$10 per garment|\\n|---|---|\\n|Minimum order quantity|1000|\\n|Turnaround|3 months|\\n|Design service|Included|\\n\\nBest,\\nRichy',\n",
-       " 'Hey Richy,\\nWe are aiming for $7.50 per unit production. Can we remove the design service to get the price lower?\\n[Quoted text hidden]\\n--\\nMehul Khetrapal\\nUniversity of Southern California ‘20 ‘21\\nB.S. Computational Neuroscience\\nM.S. Biomedical Engineering\\nhttps://www.linkedin.com/in/mehul-khetrapal/',\n",
-       " \"We can remove the design service to give you a discount. I'm not sure we can do 7.50. Let me get back to you on that.\\nBest,\\nRichy\\n[Quoted text hidden]\",\n",
-       " 'OK, we can do $8\\n[Quoted text hidden]\\n\\nMehul Khetrapal <mehulkhetrapal1@gmail.com> - Sat, Feb 3, 2024 at 11:08 AM\\n\\nLink to the conversation\\n---\\n2/3/24, 11:09 AM                                                                     Gmail - ASW followup\\n\\nTo: Richy Chen <richychentl@gmail.com>\\n\\nHey Jerry!\\n\\nThat works for us. Can you send over the contract?\\n\\n[Quoted text hidden]\\n\\nhttps://mail.google.com/mail/u/0/?ik=82f527275a&view=pt&search=all&permthid=thread-f:1789905488624882917&simpl=msg-f:1789905488624882917&simpl=…  2/2']"
+       "[]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
