--- a/Splitter.ipynb
+++ b/Splitter.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_agent.set_mission(raw_prompt)"
+    "new_agent.set_objective(raw_prompt)"
    ]
   },
   {
